<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SanCoffee</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="san_login">森Account Login</string>
    <string name="sign_up">註冊新帳號</string>
    <string name="dont_login">Don\'t Login</string>
    <string name="app_id">502432043130046</string>
    <string name="news_tab">News</string>
    <string name="cook_tab">Cook</string>
    <string name="scan_tab">Scan</string>
    <string name="scan_or">Or</string>
    <string name="scan_result">掃描結果\:</string>
    <string name="scan_input_sn">請輸入序號</string>
    <string name="scan_ok">確認</string>
    <string name="scan_name">品名</string>
    <string name="scan_bake_degree">烘培度</string>
    <string name="scan_origin">產地</string>
    <string name="scan_open_date">開封日期</string>
    <string name="scan_not_login">未登錄</string>
    <string name="scan_add_to_my_list">加到我的清單</string>
    <string name="my_tab">My</string>
    <string name="my_best_drink_date">最適飲用日期</string>
    <string name="my_beans_introduction">豆種介紹</string>
    <string name="my_manor_introduction">莊園介紹</string>
    <string name="my_suggestion">沖煮建議</string>
    <string name="my_rating">給予評價</string>
    <string name="setup_tab">Setup</string>
    <string name="back">Back</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="forget_pw">忘記密碼</string>
    <string name="sign_up_account">帳號/電子郵件</string>
    <string name="password_again">再次輸入密碼</string>
    <string name="nickname">暱稱</string>
    <string name="register">註冊</string>
    <string name="invalid_account_password">您所輸入的帳號密碼有誤, 請確認後輸入</string>
    <string name="ok">確定</string>
    <string name="send_password_to_mail">您的密碼已經透過電子郵件傳送到您的信箱</string>
    <string name="sign_up_success">註冊成功, 請至您的信箱收取帳號開通郵件</string>
    <string name="sign_up_already_registed">您的帳號已被申請, 請再次確認帳號/電子郵件</string>
    <string name="sign_up_confirm">請確認所有欄位資訊</string>
    <string name="please_login">此功能為會員專屬, 請先登入帳號</string>
    <string name="recognize_sn_code_fail">此序號無法辨分或非本產品所提供</string>
    <string name="recognize_qr_code_fail">此QR Code無法辨分或非本產品所提供</string>
    <string name="setup_auto_remind">自動提醒</string>
    <string name="setup_logout">登出</string>
    <string name="setup_copyright">版權宣言</string>
    <string name="setup_about_us">關於我們</string>
    <string name="setup_push_notification">豆期-推播</string>
    <string name="setup_email">豆期-電子郵件</string>
    <string name="setup_auto_remind_news">News-自動提醒</string>
</resources>