<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_result"
        />
    
        
    <TextView android:id="@+id/scanresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_or"
        />
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_input_sn"
        />   
    
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        ></EditText>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="80dp"
        android:text="@string/scan_ok" />     
        
</LinearLayout>