<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/facebooklogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="80dp"
        android:text="@string/facebook_login" />

    <Button
        android:id="@+id/sanlogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="80dp"
        android:text="@string/san_login" />

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="80dp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/dontlogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="80dp"
        android:text="@string/dont_login" />

</RelativeLayout>