<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
     >

    <Button
        android:id="@+id/san_login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/account" 
        android:layout_marginTop="160dp"/>
    
    <EditText
        android:id="@+id/san_account"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:inputType="textEmailAddress"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/password" 
        android:layout_marginTop="220dp"/>
    
    <EditText
        android:id="@+id/san_password"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:inputType="textPassword"
         />
    
    <Button
        android:id="@+id/san_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login" 
        android:layout_marginTop="280dp"/>    

    <Button
        android:id="@+id/san_login_fb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_login"
        android:layout_marginTop="350dp" 
        android:layout_marginLeft="50dp"
        />    

    <Button
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pw"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="200dp"
         />    
    
</RelativeLayout>